/*
 *  This file is part of the initial project provided for the
 *  course "Project in Software Development (02362)" held at
 *  DTU Compute at the Technical University of Denmark.
 *
 *  Copyright (C) 2019, 2020: Ekkart Kindler, ekki@dtu.dk
 *
 *  This software is free software; you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation; version 2 of the License.
 *
 *  This project is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this project; if not, write to the Free Software
 *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
 */
package dk.dtu.compute.se.pisd.roborally.model;

import dk.dtu.compute.se.pisd.designpatterns.observer.Subject;
import dk.dtu.compute.se.pisd.roborally.fileaccess.model.CommandCardFieldTemplate;
import dk.dtu.compute.se.pisd.roborally.fileaccess.model.PlayerTemplate;
import org.jetbrains.annotations.NotNull;

import static dk.dtu.compute.se.pisd.roborally.model.Heading.SOUTH;

/**
 * ...
 *
 * @author Ekkart Kindler, ekki@dtu.dk
 */
public class Player extends Subject {

    final public static int NO_REGISTERS = 5;
    final public static int NO_CARDS = 8;

    public Board board;
    Space space;
    private String name;
    private String color;
    private int checkpointCounter;
    private Heading heading = SOUTH;
    private CommandCardField[] registerSlots;
    private CommandCardField[] availableCardSlots;

    //private boolean hasMovedThisTurn = false;

    public Player(@NotNull Board board, String color, @NotNull String name) {
        this.board = board;
        this.name = name;
        this.color = color;

        this.space = null;

        registerSlots = new CommandCardField[NO_REGISTERS];
        for (int i = 0; i < registerSlots.length; i++) {
            registerSlots[i] = new CommandCardField(this);
        }

        availableCardSlots = new CommandCardField[NO_CARDS];
        for (int i = 0; i < availableCardSlots.length; i++) {
            availableCardSlots[i] = new CommandCardField(this);
        }
    }
    public Player(PlayerTemplate template,Board board){
        this.name = template.name;
        this.color = template.color;
        this.board = board;
        this.space = board.getSpace(template.x,template.y);
        registerSlots = new CommandCardField[NO_REGISTERS];
        for (int i = 0; i < registerSlots.length; i++) {
            registerSlots[i] = new CommandCardField(template.registerSlots[i],this);
        }

        availableCardSlots = new CommandCardField[NO_CARDS];
        for (int i = 0; i < availableCardSlots.length; i++) {
            availableCardSlots[i] = new CommandCardField(template.availableCardSlots[i],this);
        }
    }


    public int getCheckpointCounter() {
        return checkpointCounter;
    }

    public void incrementCheckpointCounter() {
        this.checkpointCounter++;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        if (name != null && !name.equals(this.name)) {
            this.name = name;
            notifyChange();
            if (space != null) {
                space.playerChanged();
            }
        }
    }

    public String getColor() {
        return color;
    }

    public void setColor(String color) {
        this.color = color;
        notifyChange();
        if (space != null) {
            space.playerChanged();
        }
    }

    public Space getSpace() {
        return space;
    }

    public void setSpace(Space space) {
        Space oldSpace = this.space;
//        if (space != oldSpace &&
//                (space == null || space.board == this.board)) {
        this.space = space;
        if (oldSpace != null) {
            oldSpace.setPlayer(null);
        }
        if (space != null) {
            space.setPlayer(this);
        }
        notifyChange();
//    }

    }

    public Heading getHeading() {
        return heading;
    }

    public void setHeading(@NotNull Heading heading) {
        if (heading != this.heading) {
            this.heading = heading;
            notifyChange();
            if (space != null) {
                space.playerChanged();
            }
        }
    }

    /*public boolean hasMovedThisTurn() {
        return hasMovedThisTurn;
    }

    public void setHasMovedThisTurn(boolean hasMovedThisTurn) {
        this.hasMovedThisTurn = hasMovedThisTurn;
    }*/

    public CommandCardField getRegisterSlot(int i) {
        return registerSlots[i];
    }

    public CommandCardField getAvailableCardSlot(int i) {
        return availableCardSlots[i];
    }

    public CommandCardField[] getRegisterSlots() {
        return registerSlots;
    }
    public CommandCardField[] getAvailableCardSlots(){
        return availableCardSlots;
    }

}
